# xy_request_handler__feedback

./: MANIFEST.in  README.md  pyproject.toml
readme/: README.en.md  README.zh-hant.md  README_en.md  README_zh_CN.md  README_zh_TW.md
samples/xy_web_server_demo/: requirements.txt
samples/xy_web_server_demo/source/Runner/: Runner.py
samples/xy_web_server_demo/source/Runner/Admin/: db.sqlite3
samples/xy_web_server_demo/source/Runner/Admin/ApiAuth/: admin.py  apps.py  models.py  serializers.py
samples/xy_web_server_demo/source/Runner/Admin/ApiAuth/migrations/: 0001_initial.py
samples/xy_web_server_demo/source/Runner/Admin/Demo/: models.py
samples/xy_web_server_demo/source/Runner/Admin/Demo/migrations/: 0003_mdemo_region.py  0004_rename_region_mdemo_image.py
samples/xy_web_server_demo/source/Runner/Admin/Information/: admin.py  apps.py  models.py  serializers.py
samples/xy_web_server_demo/source/Runner/Admin/Media/: admin.py  apps.py  models.py
samples/xy_web_server_demo/source/Runner/Admin/Media/migrations/: 0001_initial.py  0002_mmovie_delete_mimage.py
samples/xy_web_server_demo/source/Runner/Admin/Resource/: admin.py  apps.py  models.py
samples/xy_web_server_demo/source/Runner/Admin/Resource/migrations/: 0002_mimage_mini_thumbnail.py
samples/xy_web_server_demo/source/Runner/Admin/xy_web_server_demo/: settings.py  urls.py
xy_request_handler__feedback/: Feedbacks.py  urls.py
